# CMP275-assignments

./: CMakeLists.txt
include/: CSVParser.hpp  CollisionDataset.hpp  CollisionRecord.hpp  ParallelBenchmark.hpp
mini1/: .gitignore  CMakeLists.txt  Report.md  visualize.py
mini1/docs/: mini1-memory.md
mini1/include/: Benchmark.hpp  CSVParser.hpp  CSV_Utils.hpp  CollisionDataset.hpp  CollisionDatasetParallel.hpp  CollisionDatasetParallelArrays.hpp  CollisionRecord.hpp  OptimizedBenchmark.hpp  OptimizedCollisionDataset.hpp  ParallelBenchmark.hpp
mini1/src/: CSVParser.cpp  CollisionDataset.cpp  CollisionDatasetParallel.cpp  CollisionDatasetParallelArrays.cpp  CollisionRecord.cpp  OptimizedCollisionDataset.cpp  main.cpp
src/: CSVParser.cpp  CollisionDataset.cpp  main.cpp
